--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-25 04:16:02
+lastsearch = 2024-07-25 11:21:11
 
 [shopee.vn]
-match = -47.8%%
-title = Chiếu Cói Thái Bình ❤️FREESHIP❤️Chiếu Cói May Viền ...
-url = https://shopee.vn/Chiếu-Cói-Thái-Bình-❤️FREESHIP❤️Chiếu-Cói-May-Viền-In-Hoa-Gấm-Dừa-0-8-1m2-1m5-1m6-1m8-2m2-i.126028938.10544465291
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [m.facebook.com]
 match = -13.0%%
@@ -17,9 +17,9 @@ title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
 url = https://m.facebook.com/61553157173242/
 
 [tiki.vn]
-match = -21.7%%
-title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
+match = -47.8%%
+title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên - ...
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384235
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -27,14 +27,14 @@ title = Cơ Sở Sản Xuất Chiếu Thái Bình
 url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.lazada.vn]
-match = -21.7%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.8 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-18-m-x-2-m-i813838027.html
+match = -26.1%%
+title = Chiếu Cói ❤️FREESHIP❤️Chiếu Thái Bình In Hoa 0,8/ ...
+url = https://www.lazada.vn/products/chieu-coi-freeshipchieu-thai-binh-in-hoa-081m21m51m61m82m2-i2001525909.html
 
 [www.sendo.vn]
-match = 26.1%%
-title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [www.facebook.com]
 match = -30.4%%
