--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-25 06:28:58
+lastsearch = 2024-07-25 11:25:00
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [shopee.vn]
-match = -3.6%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
+match = 7.1%%
+title = Chiếu Trúc Hạt Mắt Trắng Quế Lâm (Mắt nhỏ Loại 1)
+url = https://shopee.vn/Chiếu-Trúc-Hạt-Mắt-Trắng-Quế-Lâm-(Mắt-nhỏ-Loại-1)-i.22156385.939014750
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -67,8 +67,8 @@ title = Chiếu trúc quế lâm hàng loại... - Chăn chiếu giá rẻ Hà N
 url = https://m.facebook.com/permalink.php?story_fbid=830938727242953&id=825488554454637&comment_id=830982577238568&comment_tracking={"tn":"R"}
 
 [www.youtube.com]
-match = -28.6%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1 - 0965 ...
+match = -3.6%%
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://www.youtube.com/watch?v=8i3SOv4E4eo
 
 [sieuthinguyenkim.com]
