--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-25 08:02:30
+lastsearch = 2024-07-25 11:15:23
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = 5.0%%
+title = Steve Braunstein, MD, PhD
+url = https://profiles.ucsf.edu/steve.braunstein
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = -38.5%%
-title = R Lor Randall
-url = https://profiles.ucdavis.edu/r.randall
+match = 0.0%%
+title = Merrill E Gershwin
+url = https://profiles.ucdavis.edu/merrill.gershwin
 
 [store.samhsa.gov]
 match = -60.0%%
