--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-25 11:41:37
+lastsearch = 2024-07-25 13:23:38
 
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOooQbqRL04rF-eeTzZdojwq0sJGVp9NKwG4YxAiq2WXpW87TuHna
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.youtube.com]
 match = -90.5%%
