--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-25 11:28:46
+lastsearch = 2024-07-25 13:24:03
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -54,12 +54,12 @@ url = https://www.youtube.com/watch?v=kKMas4N_KAk
 [www.facebook.com]
 match = 4.2%%
 title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+url = https://www.facebook.com/chieutregiare/?locale=vi_VN
 
 [chieutrucsaigon.com]
 match = 8.3%%
-title = CHIẾU TRÚC VIỆT NAM CHẤT LƯỢNG RA SAO?
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-viet-nam-chat-luong-ra-sao-128.html
+title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
 
 [www.xskthcm.com]
 match = -83.3%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = -45.8%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOop50Mrqg7PzpkGytGfzxu6cgZAU4gnadlUZhOMYsuwTQ5ExmymT
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoo4HgzH3SEuR_24vIu_dEZSZpL-TxHU1l4SMf8IB5rrMcOXp6UX
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -274,7 +274,7 @@ url = https://roman.vn/huong-dan-cach-chon-aptomat-cho-ho-gia-dinh-chinh-xac-nha
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOopSJDx_mkLrOP5mmWhnm4f_bFZh0yCVUhsD1wWIvfOahc3DEAk9
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOooXJjxcgDtLv0HCJjUyPDtj8lAxT2LZeFGAkNtzi6s_zgFr6zmI
 
 [www.sbv.gov.vn]
 match = -111.1%%
