--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-25 11:55:35
+lastsearch = 2024-07-25 13:23:17
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -100.0%%
+title = [MẪU VÀ GIÁ] 70+ BỘ BÀN GHẾ ĐÁ NGOÀI TRỜI
+url = https://ghedagiago.com/danh-muc/ban-ghe-da-ngoai-troi/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -120.0%%
-title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
-url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
+match = -133.3%%
+title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
+url = https://ghedamienbac.com/ban-ghe-da/
 
 [bangheda.info]
 match = -140.0%%
@@ -100,4 +100,9 @@ url = https://ghedasaigon.com/gia-bo-ban-ghe-da/
 match = 40.0%%
 title = Bàn ghế đá một màu
 url = https://ghedagiaxuong.vn/ban-ghe-da-mot-mau-trang
+
+[www.bulaz.com]
+match = -80.0%%
+title = Bàn ghế đá tự nhiên (mẫu bàn dài 2,1m)
+url = https://www.bulaz.com/vn/ban-ghe-da-tu-nhien-mau-ban-dai-21m-150.html
 
