--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-25 14:20:01
+lastsearch = 2024-07-25 16:32:46
 
 [changagoidemsonghong.com]
-match = -12.5%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = 4.2%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -45.8%%
-title = Mua sắm online sản phẩm Chăn, Ga, Gối & Nệm giá tốt
-url = https://shopee.vn/Chăn-Ga-Gối-Nệm-cat.11036670.11036683
+match = -75.0%%
+title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
+url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
 match = 20.8%%
