--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-25 01:51:14
+lastsearch = 2024-07-25 16:45:04
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -97,9 +97,9 @@ title = nhà cung cấp dây đồ da
 url = https://www.yellowpages.vn/tgcls/20141160/nhà-cung-cấp-dây-đồ-da.html?i=1
 
 [dungcuykhoabinhminh.com]
-match = -57.1%%
-title = Hướng dẫn sử dụng đèn ánh sáng sinh học điều trị da 7 ...
-url = https://dungcuykhoabinhminh.com/huong-dan-su-dung-den-anh-sang-sinh-hoc-dieu-tri-da-7-mau-devoir-427.436.html
+match = -31.2%%
+title = Y Khoa Bình Minh
+url = https://dungcuykhoabinhminh.com/
 
 [stableprogram.org]
 match = 26.1%%
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -57.1%%
-title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
-url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
+match = -75.0%%
+title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
+url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
