--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-25 14:21:45
+lastsearch = 2024-07-25 16:36:34
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -128.6%%
+title = Bảng giá bán bộ chăn ga gối cưới Everon Hàn Quốc Es 1816
+url = https://everonvn.com.vn/everon/615/bo-everon-es1816
 
 [www.everonqb.com]
-match = -71.4%%
-title = Ga phủ ESM20013 180x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-esm20013-180x200.html
+match = -66.7%%
+title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -119.0%%
+title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
+url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
 
 [beecost.vn]
 match = -61.9%%
