--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-25 15:44:54
+lastsearch = 2024-07-25 16:38:40
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html?srsltid=AfmBOooEJiWfHwiXH97HHW3Kq-2JfiAFtxxFK6psp22L8gcRrORFk682
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -29,7 +29,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/?srsltid=AfmBOooT_XmO-WU6HcX2zZsdqbwX3a6y3lYP129u_2mLiKLwmYccqik3
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -49,7 +49,7 @@ url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.h
 [www.diepxuan.com]
 match = 36.2%%
 title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html?srsltid=AfmBOopW_WA-47mez5DXKWobStArXHlLTV36CZSr7tGhlXwVLW-iiJJL
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
 match = 25.5%%
