--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-25 15:33:54
+lastsearch = 2024-07-25 16:44:24
 
 [www.diepxuan.com]
 match = 5.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoro_wpMUvJmcMQoQlnqxdTL0WFOs0d3p_cPtjzHjdh1VjNQail1
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
 match = -10.5%%
