--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -81.2%%
-title = בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/album/-
+match = -225.0%%
+title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/track/ave-maria
 
 [demxanh.com]
 match = -181.2%%
