--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-25 20:10:26
+lastsearch = 2024-07-25 21:21:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOop11VKdYk_3XKt0rF9gI38toB_2fG9ypLnCuHcmFs-XjB88EQJY
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOooSm145HUVTynSeo3iXMOFXSYp2zpj3NCb00Kg2JUSwtCCcNPuY
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -314,7 +314,7 @@ url = https://congly.vn/cong-an-tp-hcm-khai-giang-lop-huan-luyen-phong-chong-duo
 [www.mykingdom.com.vn]
 match = -14.3%%
 title = MYKINGDOM - VƯƠNG QUỐC ĐỒ CHƠI
-url = https://www.mykingdom.com.vn/?srsltid=AfmBOoop7LunwIdAR8SiIxmBxG72Mx7bko3CmSMWA7iDWhRRICqro75G
+url = https://www.mykingdom.com.vn/
 
 [www.ihg.com]
 match = -104.8%%
